media box methods fix on mobile

--- a/app/assets/stylesheets/CBPFWTabs.scss
+++ b/app/assets/stylesheets/CBPFWTabs.scss
@@ -201,14 +201,14 @@
 	.mediabox {
 		float: none;
 		width: auto;
-		padding: 0 0 35px 0;
-		font-size: 90%;
+		padding: 0 0 20px 0;
+		text-align: center;
 	}
 
 	.mediabox img {
-		float: left;
-		margin: 0 25px 10px 0;
-		max-width: 40%;
+		float: none;
+		margin: 0 auto;
+		max-width: 100%;
 	}
 
 	.mediabox h3 {
